@@ -136,6 +136,10 @@ IN DEVELOPMENT
       put by the method call, to allow avoiding stat-after-write or
       housekeeping in callers. (Robert Collins)
 
+   * New class ``bzrlib.errors.InternalBzrError`` which is just a convenient
+     shorthand for deriving from BzrError and setting internal_error = True.
+     (Robert Collins)
+
    * New method ``bzrlib.osutils.minimum_path_selection`` useful for removing
      duplication from user input, when a user mentions both a path and an item
      contained within that path. (Robert Collins)
